--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-   "start": "babel-node ./index.js",
+    "start": "babel-node ./index.js",
     "dev": "nodemon --exec babel-node ./index.js"
   },
   "repository": {
@@ -26,7 +26,9 @@
     "@babel/preset-env": "^7.20.2",
     "babel-eslint": "^10.1.0",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^5.13.15",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "eslint": "^8.33.0",
