--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@babel/preset-env": "^7.20.2",
     "babel-eslint": "^10.1.0",
     "bcryptjs": "^2.4.3",
+    "corps": "^0.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^5.13.15",
