--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node ./index.js",
-    "dev": "nodemon --exec babel-node ./index.js"
+    "start": "nodemon --exec babel-node ./src/index.js",
+    "dev": "nodemon --exec babel-node ./src/index.js"
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^5.13.15",
+    "socket.io": "^4.6.0",
     "validator": "^13.9.0"
   },
   "devDependencies": {
